[package]
name = "ftcr"
version = "0.1.0"
authors = ["KoutaMatsushita <kouta19960921+github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.19"
reqwest = { version = "0.10", features = ["blocking", "json"] }
getopts = "0.2"
anyhow = "1.0"
thiserror = "1.0"
